--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           【Qinの国民に告ぐ】国王を祝福し、汝の望みを記せ<br/>
           汝の願いを記せ<br/>
           汝の夢を記せ<br/>
-          <span style="color:yellow">汝の望み、汝の願い、汝の夢、国王の耳にしかと届きけり</span><br/>
+          <span style="color:yellow">汝の望み、汝の願い、汝の夢、Qinの国王の耳にしかと届きけり</span><br/>
           Qinの国民よ、汝の眠れる才能に目覚めよ<br/>
           共に学び、共に喜び、共に泣き、共に強くなろう<br/>
           </p>
